--- a/src/App.css
+++ b/src/App.css
@@ -305,6 +305,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .txt-rotate > .wrap {
   border-right: 0.08em solid #666;
 }
+#rotatedTxt{
+  height: 520px;
+}
 
 /************ Skills Css ************/
 .skill {
