--- a/src/App.css
+++ b/src/App.css
@@ -308,7 +308,13 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 #rotatedTxt{
   height: 520px;
 }
-
+#videoDiv{
+  margin: auto;
+  width: 100%;
+  height: 410px;
+  border: 10px solid linear-gradient(to right, red, orange);
+  border-radius: 10px;
+}
 /************ Skills Css ************/
 .skill {
   padding: 0 0 50px 0;
