--- a/src/App.css
+++ b/src/App.css
@@ -311,7 +311,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 #videoDiv{
   margin: auto;
   width: 100%;
-  height: 410px;
+  height: 430px;
   border: 10px solid linear-gradient(to right, red, orange);
   border-radius: 10px;
 }
@@ -432,6 +432,18 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0 55px 55px 0;
 }
+.nav-link#categories-tabs-tab-web_development {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 55px 0px 0px 55px;
+}
+.nav-link#categories-tabs-tab-computer_vision {
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+.nav-link#categories-tabs-tab-GUI {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 0 55px 55px 0;
+}
 a .proj-imgbx {
   position: relative;
   border-radius: 30px;
@@ -450,6 +462,7 @@ a .proj-imgbx::before {
 a .proj-imgbx:hover::before {
   height: 100%;
 }
+
 .proj-txtx {
   position: absolute;
   text-align: center;
@@ -464,6 +477,30 @@ a .proj-imgbx:hover .proj-txtx {
   top: 50%;
   opacity: 1;
 }
+
+button .proj-imgbx {
+  position: relative;
+  border-radius: 30px;
+  overflow: hidden;
+  margin-bottom: 24px;
+}
+button .proj-imgbx::before {
+  content: "";
+  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  opacity: 0.85;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  transition: 0.4s ease-in-out;
+}
+button .proj-imgbx:hover::before {
+  height: 100%;
+}
+button .proj-imgbx:hover .proj-txtx {
+  top: 50%;
+  opacity: 1;
+}
+
 .proj-txtx h4 {
   font-size: 30px;
   font-weight: 700;
@@ -488,6 +525,21 @@ a .proj-imgbx:hover .proj-txtx {
 }
 
 /************ Projects Css ************/
+.projectModal{
+  margin-top: 100px;
+}
+.projectModal .modal-dialog {
+  max-width: 85%;
+  margin-bottom: 120px;
+}
+.modalBackground{
+  width: 100%;
+  height: 100%;
+  background-color: #151515;
+}
+.modalHeader, .modalFooter{
+  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+}
 .contact {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
   padding: 60px 0 200px 0;
