--- a/src/App.css
+++ b/src/App.css
@@ -256,12 +256,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: inline-block;
 }
 .banner h1 {
-  font-size: 65px;
+  font-size: 40px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1;
-  margin-bottom: 20px;
   display: block;
+}
+@media screen and (max-width: 650px) {
+  .title {
+    font-size: 25px;
+  }
 }
 .banner p {
   color: #B8B8B8;
@@ -291,6 +295,19 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner img {
   animation: updown 3s linear infinite;
 }
+.wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 @keyframes updown {
     0% {
         transform: translateY(-20px);
@@ -306,14 +323,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   border-right: 0.08em solid #666;
 }
 #rotatedTxt{
-  height: 520px;
-}
-#videoDiv{
-  margin: auto;
-  width: 100%;
-  height: 430px;
-  border: 10px solid linear-gradient(to right, red, orange);
-  border-radius: 10px;
+  height: 330px;
 }
 /************ Skills Css ************/
 .skill {
@@ -358,6 +368,32 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   width: 3em;
   height: 3em;
 }
+@media (max-width: 768px) {
+  #pills-categories{
+    width: 90% !important;
+  }
+  #pills-tabs{
+    width: 70% !important;
+  }
+}
+@media (max-width: 600px) {
+  .pill-categories {
+    font-size: 12px !important;
+  }
+  #pills-categories{
+    height: 10% !important;
+  }
+  .pill-tabs {
+    font-size: 12px !important;
+  }
+  #pills-tabs{
+    height: 10% !important;
+  }
+  .logoFooter{
+    display: none;
+  }
+}
+
 
 /************ Projects Css ************/
 .project {
@@ -380,11 +416,21 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   width: 56%;
 }
 .project .nav.nav-pills {
-  width: 72%;
+  width: 75%;
   margin: 0 auto;
   border-radius: 50px;
   background-color: rgb(255 255 255 / 10%);
   overflow: hidden;
+}
+#pills-tabs{
+  width: 50%;
+}
+
+#pills-categories{
+  height: 10%;
+}
+#pills-tabs{
+  height: 10%;
 }
 .project .nav.nav-pills .nav-item {
   width: 33.33333%;
@@ -688,4 +734,67 @@ button .proj-imgbx:hover .proj-txtx {
   color: #B8B8B8;
   letter-spacing: 0.5px;
   margin-top: 20px;
+}
+.social-icon-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.social-icon-footer .social-link {
+  width: 42px;
+  height: 42px;
+  background: rgba(217, 217, 217, 0.1);
+  display: inline-flex;
+  border-radius: 50%;
+  margin-bottom: 10px; /* Add margin between elements */
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  position: relative; /* Needed for ::before positioning */
+}
+
+.social-icon-footer .social-link::before {
+  content: "";
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  background-color: #ffffff;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 0.3s ease-in-out;
+}
+
+.social-icon-footer .social-link:hover::before {
+  transform: scale(1);
+}
+
+.social-icon-footer .social-link img {
+  width: 40%;
+  z-index: 1;
+  transition: 0.3s ease-in-out;
+}
+
+.social-icon-footer .social-link:hover img {
+  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
+}
+.social-icon-footer .social-link-text {
+  width: auto;
+  height: 42px;
+  text-decoration: none;
+  display: inline-flex;
+  margin-bottom: 10px; /* Add margin between elements */
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  position: relative; /* Needed for ::before positioning */
+  margin-left: 8px;
+}
+.social-icon-footer .social-link-text p{
+  color: white;
+}
+.social-icon-footer .social-link-text p:hover{
+  color: #4A2FBD;
+  text-decoration: underline;
 }
