--- a/src/App.css
+++ b/src/App.css
@@ -328,7 +328,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 /************ Skills Css ************/
 .skill {
-  padding: 0 0 50px 0;
+  padding: 60px 0 50px 0;
   position: relative;
 }
 .skill-bx {
